Добавлено использование динамической библиотеки с использованием dlfcn

--- a/dlfcn/Makefile
+++ b/dlfcn/Makefile
@@ -10,7 +10,7 @@ dir: ./object_file
 	mkdir ./object_file
 
 libcalc.a: library
-	$(CC) -shared $(OBJDIR)/sum.o $(OBJDIR)/sub.o $(OBJDIR)/mul.o $(OBJDIR)/divis.o -o libcalc.so
+	$(CC) -shared $(OBJDIR)/sum.o $(OBJDIR)/sub.o $(OBJDIR)/mul.o $(OBJDIR)/divis.o -o $(CDIR)/libcalc.so
 
 library: $(CDIR)/sum.c $(CDIR)/sub.c $(CDIR)/mul.c $(CDIR)/divis.c
 	$(CC) -fPIC -c $(CDIR)/sum.c -o $(OBJDIR)/sum.o -I./
@@ -19,10 +19,10 @@ library: $(CDIR)/sum.c $(CDIR)/sub.c $(CDIR)/mul.c $(CDIR)/divis.c
 	$(CC) -fPIC -c $(CDIR)/divis.c -o $(OBJDIR)/divis.o -I./
 
 test: $(OBJDIR)/main.o
-	$(CC) -o $(CDIR)/test $(OBJDIR)/main.o -lcalc -L.
+	$(CC) -o $(CDIR)/test $(OBJDIR)/main.o -ldl -L.
 
 $(OBJDIR)/main.o: $(CDIR)/main.c
-	$(CC) -g -c $(CDIR)/main.c -o $(OBJDIR)/main.o -I./
+	$(CC) -g -c $(CDIR)/main.c -o $(OBJDIR)/main.o -ldl -I./
 
 main: main_file.c
 	$(CC) -o main main_file.c
